[tool.poetry]
name = "attestful"
version = "0.1.0"
description = "OSCAL-first compliance automation platform. Open-source Vanta alternative."
authors = ["Attestful Contributors"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/clay-good/attestful"
repository = "https://github.com/clay-good/attestful"
keywords = ["compliance", "oscal", "security", "nist", "soc2", "fedramp", "iso27001"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
packages = [{ include = "attestful", from = "src" }]

[tool.poetry.scripts]
attestful = "attestful.cli.main:main"

[tool.poetry.dependencies]
python = "^3.11"

# Core dependencies
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
click = "^8.1.7"
rich = "^13.7.0"
pyyaml = "^6.0.1"
requests = "^2.33.0"
cryptography = "^46.0.5"
jmespath = "^1.0.1"
orjson = "^3.11.6"

# Cloud SDKs (core AWS, others optional)
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.2"
mypy = "^1.8.0"
ruff = "^0.1.9"
black = "^26.3.1"
pre-commit = "^3.6.0"
bandit = "^1.7.6"
responses = "^0.24.1"

# Type stubs
boto3-stubs = { extras = ["essential"], version = "^1.34.0" }
types-pyyaml = "^6.0.12"
types-requests = "^2.31.0"

[tool.poetry.extras]
# PDF report generation
pdf = ["weasyprint"]

# Snowflake integration
snowflake = ["snowflake-connector-python"]

# Google Workspace integration
google = ["google-api-python-client", "google-auth", "google-auth-oauthlib"]

# Azure integration
azure = [
    "azure-identity",
    "azure-mgmt-resource",
    "azure-mgmt-compute",
    "azure-mgmt-storage",
    "azure-mgmt-network",
]

# GCP integration
gcp = ["google-cloud-compute", "google-cloud-storage", "google-cloud-asset"]

# Kubernetes integration
kubernetes = ["kubernetes"]

# Enterprise features (API, dashboard, task queue)
enterprise = ["fastapi", "uvicorn", "celery", "redis", "dash", "plotly"]

# All optional dependencies
all = [
    "weasyprint",
    "snowflake-connector-python",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "azure-identity",
    "azure-mgmt-resource",
    "azure-mgmt-compute",
    "azure-mgmt-storage",
    "azure-mgmt-network",
    "google-cloud-compute",
    "google-cloud-storage",
    "google-cloud-asset",
    "kubernetes",
    "fastapi",
    "uvicorn",
    "celery",
    "redis",
    "dash",
    "plotly",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "-ra",
    "--cov=src/attestful",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "security: Security tests",
    "oscal: OSCAL-related tests",
    "collector: Collector tests",
    "offline: Offline/air-gap tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/attestful"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/_version.py",
]
data_file = ".coverage"

[tool.coverage.report]
fail_under = 80
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "raise AssertionError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "pass",
    "\\.\\.\\.",
]
exclude_also = [
    "if self.debug:",
    "if settings.DEBUG",
]

[tool.coverage.html]
directory = "coverage_html"
title = "Attestful Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "celery.*",
    "dash.*",
    "plotly.*",
    "weasyprint.*",
    "snowflake.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "TID",    # flake8-tidy-imports
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert used (needed for tests)
    "S104",   # binding to all interfaces (needed for servers)
    "S105",   # hardcoded password (false positives in tests)
    "S106",   # hardcoded password (false positives in tests)
    "COM812", # trailing comma (conflicts with formatter)
    "ISC001", # implicit string concat (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG", "PLR2004"]
"src/attestful/cli/*" = ["B008"]  # function calls in argument defaults (Click)

[tool.ruff.lint.isort]
known-first-party = ["attestful"]
force-single-line = false
lines-after-imports = 2

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.ruff_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101"]  # assert_used - needed for tests
